# fast-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
